Ensure scrollbar groove is different to splitter

--- a/MaterialSkin/HTML/material/html/css/dark-scrollbar.css
+++ b/MaterialSkin/HTML/material/html/css/dark-scrollbar.css
@@ -8,7 +8,7 @@
 ::-webkit-scrollbar {
     height: 10px;
     width: 10px;
-    background: #333;
+    background: #3d3d3d;
 }
 
 ::-webkit-scrollbar-thumb {
